fix the alignment of newtext and image in Portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ img#profile-image {
   display: table;
 }
 
-a {
+li a {
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
@@ -165,7 +165,11 @@ input.submit {
   font-family: Arial, Helvetica, sans-serif;
   width: 330px;
 }
-
+a h2 {
+  text-decoration: none;
+  text-decoration-line: none;
+  color: #ffffff;
+}
 /* change text color when hovered */
 a:hover {
   /* choose a close color with color wheel */
